--- a/ecommerce-backend/appsettings.json
+++ b/ecommerce-backend/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Jwt": {
+    "Issuer": "http://localhost:5257",
+    "Audience": "http://localhost:5257",
+    "Key": "<SuperSecretKey>"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=ecommerce-backend;Username=postgres;Password=password"
   },
