authentication and authorization
-added jwt token generator
-added swagger authorization support
-added basic admin/user authorization

--- a/ecommerce-backend/appsettings.json
+++ b/ecommerce-backend/appsettings.json
@@ -2,7 +2,8 @@
   "Jwt": {
     "Issuer": "http://localhost:5257",
     "Audience": "http://localhost:5257",
-    "Key": "<SuperSecretKey>"
+    "Key": "<SuperSecretKey>",
+    "ExpirationInMinutes": 60
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=ecommerce-backend;Username=postgres;Password=password"
